sosmedmanifest/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: sosmed-deployment
spec:
  selector:
    matchLabels:
      app: sosmed
  replicas: 2        # tells deployment to run 2 pods matching the template
  template:          # create pods using pod definition in this template
    metadata:
# unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
# generated from the deployment name
      labels:
        app: sosmed
    spec:
      containers:
      - name: sosmed
        image: rodxolotl/sosmed:1.0.0
        ports:
        - containerPort: 8080
