sosmedmanifest/service.yaml
apiVersion: apps/v1beta2
kind: Service
apiVersion: v1
metadata:
  name: sosmed-service
spec:
  type: ClusterIP
  selector:
    app: sosmed
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
