sosmedmanifest/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sosmed-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/fastcgi_send_timeout: "1800"
    nginx.ingress.kubernetes.io/fastcgi_read_timeout: "1800"
spec:
  rules:
    - host: sosmedprod.rodxolotl.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sosmed-service
                port:
                  number: 8080
